pre-setup for highlighting

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "services_enhanced";
 @import "modern_navbar";
 @import "layout_integration";
+@import "syntax_highlighting";
 
 // Custom styles
 body {
