--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -60,7 +60,7 @@
             Etiquetas Más Populares
           </h4>
           <div class="row">
-            <% @tags_with_counts.limit(6).each do |tag| %>
+            <% @tags_with_counts.each do |tag| %>
               <div class="col-md-4 mb-3">
                 <div class="card h-100">
                   <div class="card-body text-center">
