Revert "pre-setup for highlighting"
This reverts commit 22b814ff259307683ec483aeb79283e1cce3523c.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -186,7 +186,7 @@
     <!-- Article Content -->
     <div class="row justify-content-center">
       <div class="col-lg-10">
-        <article class="post-content mb-5" data-controller="syntax-highlighting">
+        <article class="post-content mb-5">
           <%= @post.body %>
         </article>
       </div>
