--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,6 +59,15 @@
 	<%= preload_link_tag asset_path('logo.png'), as: :image %>
 	
 	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
+	
+<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism-okaidia.min.css" rel="stylesheet" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/plugins/line-numbers/prism-line-numbers.min.css" rel="stylesheet" />
+
+	
+	<!-- Prism.js for syntax highlighting -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.30.0/components/prism-core.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.30.0/plugins/autoloader/prism-autoloader.min.js"></script>
+	
 	<%= javascript_importmap_tags %>
 </head>
 
