Dashboard refactor + updates

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -34,4 +34,7 @@
 
   <!-- Device Analytics -->
   <%= render 'device_analytics' %>
+
+  <!-- Daily Visits Chart -->
+  <%= render 'daily_visits_chart' %>
 </div>
