--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,14 @@
 	<!-- Trix Editor CSS -->
 	<link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.8/dist/trix.css">
 	
+	<!-- Chartkick CSS -->
+	<%= content_for :head %>
+	<style>
+		.chartkick canvas {
+			border-radius: 8px;
+		}
+	</style>
+	
 <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism-okaidia.min.css" rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/plugins/line-numbers/prism-line-numbers.min.css" rel="stylesheet" />
 
