--- a/app/views/dashboards/_newsletter_and_search.html.erb
+++ b/app/views/dashboards/_newsletter_and_search.html.erb
@@ -65,7 +65,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="mt-3 text-center">
             <div class="alert alert-info">
               <strong>Conversión Total:</strong> <%= @newsletter_conversion_rate || 0 %>%
@@ -92,7 +92,7 @@
               <div class="term-rank">#<%= index + 1 %></div>
               <div class="term-content">
                 <div class="term-name"><%= term %></div>
-                <div class="term-count"><%= pluralize(count, 'búsqueda') %></div>
+                <div class="term-count"><%= count %></div>
               </div>
               <div class="term-bar">
                 <div class="term-progress" style="width: <%= (count.to_f / @popular_search_terms.values.max * 100).round(1) %>%"></div>
